--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PZ'
 - !lcsh 'Toys -- Juvenile fiction'
+- GITenberg
 title: The Story of a Candy Rabbit
 url: http://www.gutenberg.org/ebooks/17276
